--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,224 @@
 .App {
-  text-align: center;
+  /* text-align: center;  background: #007bff;
+  background: linear-gradient(to right, #0062E6, #33AEFF); */
+  
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
+
+/* Applying style for HR */
+hr{
+  color: inherit;
+  background-color: currentColor;
+  opacity: .25;
+}
+.card-conatiner
+{
+  width: 340px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.card-list
+{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:space-around;
+  /* gap: 10px; */
+  background: #007bff;
+  background: linear-gradient(to right, #0062E6, #33AEFF);
+}
+.card-body
+{
+  flex: 1 1 auto;
+  padding: 1rem 3rem;
+  margin-top: 1rem ;
+  text-align: center;
+  background-color: white;
+  border-radius: 10px;
+}
+
+section.pricing {
+  /* background: #007bff;
+  background: linear-gradient(to right, #0062E6, #33AEFF); */
+
+}
+
+/* Unordered list */
+.fa-ul
+{
+  margin-left: 2.5rem;padding-left: 0;list-style-type: none;
+}
+/* //Applying style for list */
+.fa-ul>li 
+{
+  position: relative;
+}
+
+li{
+  display: list-item;text-align:left;
+}
+
+/* //Span classfa-li */
+.fa-li
+{
+  left: -2em;
+  position: absolute;
+  text-align: center;
+  width: 2em;
+  line-height: inherit;
+}
+.pricing .card {
+  border: none;
+  border-radius: 1rem;
+  transition: all 0.2s;
+  box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+}
+
+.pricing hr {
+  margin: 1.5rem 0;
+}
+
+.pricing .card-title {
+  margin: 0.5rem 0;
+  font-size: 0.9rem;
+  letter-spacing: .1rem;
+  font-weight: bold;
+}
+
+.pricing .card-price {
+  font-size: 3rem;
+  margin: 0;
+}
+
+.pricing .card-price .period {
+  font-size: 0.8rem;
+}
+
+.pricing ul li {
+  margin-bottom: 1rem;
+}
+
+.pricing .text-muted {
+  opacity: 0.7;
+}
+
+.pricing .btn {
+  font-size: 80%;
+  border-radius: 5rem;
+  letter-spacing: .1rem;
+  font-weight: bold;
+  padding: 1rem;
+  opacity: 0.7;
+  transition: all 0.2s;
+}
+
+/* Hover Effects on Card */
+
+@media (min-width: 992px) {
+  .pricing .card:hover {
+    margin-top: -.25rem;
+    margin-bottom: .25rem;
+    box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.3);
+  }
+
+  .pricing .card:hover .btn {
+    opacity: 1;
+  }
+}
+
+.py-5
+{
+  padding-top: 3rem!important;
+  padding-bottom: 3rem!important;
+}
+.d-grid
+{
+  display: grid!important;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
